--- a/myart.html
+++ b/myart.html
@@ -53,7 +53,8 @@
             gap: 10px;
             padding: 20px;
             padding-top: 50px;
-            padding-left: 150px;
+            padding-left: 100px;
+            padding-right: 100px;
             overflow: visible; /* Ensure no scrollbar on left-section */
         }
 
@@ -83,6 +84,7 @@
             justify-content: center;
             align-items: flex-start;
             padding-top: 10px;
+            padding-left: 10px;
             
         }
 
