--- a/myart.html
+++ b/myart.html
@@ -9,7 +9,7 @@
         body {
             background-color: #839791;
             margin: 0;
-            font-family: 'Binate', sans-serif;
+            font-family: 'Trebuchet MS';
             display: flex;
             flex-direction: column;
             height: 100vh;
@@ -129,7 +129,7 @@
             padding: 10px;
             border-radius: 8px;
             color: #333;
-            font-family: Arial, sans-serif;
+            font-family: 'Trebuchet MS';
             font-size: 1em;
             text-align: center;
             width: 100%;
@@ -220,27 +220,27 @@
 
     <script>
         const images = [
-            { src: 'abstract1.png', name: 'Abstract 1', description: 'Description for Abstract 1' },
-            { src: 'abstract2.png', name: 'Abstract 2', description: 'Description for Abstract 2' },
-            { src: 'abstract3.png', name: 'Abstract 3', description: 'Description for Abstract 3' },
-            { src: 'abstract4.png', name: 'Abstract 4', description: 'Description for Abstract 4' },
-            { src: 'abstract5.png', name: 'Abstract 5', description: 'Description for Abstract 5' },
-            { src: 'abstract6.png', name: 'Abstract 6', description: 'Description for Abstract 6' },
-            { src: 'doodle1.png', name: 'Doodle 1', description: 'Description for Doodle 1' },
-            { src: 'doodle2.png', name: 'Doodle 2', description: 'Description for Doodle 2' },
-            { src: 'doodle3.png', name: 'Doodle 3', description: 'Description for Doodle 3' },
-            { src: 'doodle4.png', name: 'Doodle 4', description: 'Description for Doodle 4' },
-            { src: 'doodle5.png', name: 'Doodle 5', description: 'Description for Doodle 5' },
-            { src: 'doodle6.png', name: 'Doodle 6', description: 'Description for Doodle 6' },
-            { src: 'sketches1.png', name: 'Sketch 1', description: 'Description for Sketch 1' },
-            { src: 'sketches2.png', name: 'Sketch 2', description: 'Description for Sketch 2' },
-            { src: 'sketches3.png', name: 'Sketch 3', description: 'Description for Sketch 3' },
-            { src: 'sketches4.png', name: 'Sketch 4', description: 'Description for Sketch 4' },
-            { src: 'sketches5.png', name: 'Sketch 5', description: 'Description for Sketch 5' },
-            { src: 'sketches6.png', name: 'Sketch 6', description: 'Description for Sketch 6' },
-            { src: 'sketches7.png', name: 'Sketch 7', description: 'Description for Sketch 7' },
-            { src: 'sketches8.png', name: 'Sketch 8', description: 'Description for Sketch 8' },
-            { src: 'sketches9.png', name: 'Sketch 9', description: 'Description for Sketch 9' },
+            { src: 'abstract1.png', name: 'Feathered Zigs and Zags', description: "A dreamcatcher's dream, woven into reality. These feathers, symbols of hope and protection, guard the dreams of the dreamer." },
+            { src: 'abstract2.png', name: 'Leafy Labyrinth', description: 'A whimsical journey through a jungle of patterns. This monstera leaf, a portal to a world of imagination.' },
+            { src: 'abstract3.png', name: 'Ink-spired Escape', description: 'A whimsical escape, captured in ink. This mountain landscape invites you to wander through its peaks and valleys and lose yourself in its beauty.' },
+            { src: 'abstract4.png', name: 'Triangular Tranquility', description: 'A glimpse into a world beyond. This artwork transports you to a place of tranquility and wonder.' },
+            { src: 'abstract5.png', name: 'Sun, Moon, Sea, and Sky', description: 'A testament to the cyclical nature of life. The sun and moon, the sea and sky, forever changing, yet eternally the same.' },
+            { src: 'abstract6.png', name: 'Dualities in Design', description: 'A harmonious blend of chaos and order. This yin yang, a testament to the beauty of imperfection.' },
+            { src: 'doodle1.png', name: 'Doodlephoria', description: 'A chaotic harmony of lines and curves. This doodle masterpiece invites you to lose yourself in its vibrant energy.' },
+            { src: 'doodle2.png', name: 'Doodlepalooza', description: 'This doodle artwork, a reminder of the power of imagination.' },
+            { src: 'doodle3.png', name: 'Mushroom Madness', description: 'A playful mushroom, caught in a moment of stillness. Its patterns and textures tell a story of a vibrant woodland.' },
+            { src: 'doodle4.png', name: 'Creature Chaos', description: 'This doodle is a delightful mix of shapes, patterns, and characters.' },
+            { src: 'doodle5.png', name: 'Creature Cauldron', description: 'A playful mushroom, caught in a moment of stillness. Its patterns and textures tell a story of a vibrant woodland.' },
+            { src: 'doodle6.png', name: "Chaap Corner’s Crazy Crew", description: 'A whimsical world of doodles invites you to Bombay Chaap Corner, where every bite is as fun as the art on the wall.' },
+            { src: 'sketches1.png', name: 'Emotionless Enigma', description: 'A person whose inner thoughts are hidden behind a mask of indifference.' },
+            { src: 'sketches2.png', name: 'AAHHHHH!!!', description: 'A moment of pure frustration.' },
+            { src: 'sketches3.png', name: "It's HOTTTTT!!!", description: 'A fiery showdown between a brave eater and a spicy dish.' },
+            { src: 'sketches4.png', name: 'Shifting of the Self', description: 'A face unraveling, symbolizing the breakdown of the ego and the emergence of the subconscious.' },
+            { src: 'sketches5.png', name: 'Last Christmas', description: 'A grim reminder of the harsh reality of illness, even during the most joyous of times.' },
+            { src: 'sketches6.png', name: 'The Mysterious Maven', description: 'A puff of smoke and a pout, this character knows how to work a pose.' },
+            { src: 'sketches7.png', name: 'The Frozen Soul', description: 'A once-tender heart, now encased in a shell of crystal, protecting itself from further pain.' },
+            { src: 'sketches8.png', name: 'Peek-a-Boo Kitty', description: 'A curious cat explores the hidden depths of a notebook, discovering a world beyond the lines.' },
+            { src: 'sketches9.png', name: 'Square Dance', description: 'A playful dance of black and white squares, where reality is a trick of the eye.' },
         ];
 
         //Shufle the images
