--- a/p5js-lights.html
+++ b/p5js-lights.html
@@ -9,7 +9,7 @@
         body {
             background-color: #EFD5C3;
             margin: 0;
-            font-family: 'DM Serif Display', serif;
+            font-family: 'Georgia';
             display: flex;
             height: 100vh;
             overflow: hidden;
@@ -22,7 +22,8 @@
             flex-direction: column; /* Ensure content appears in rows */
             justify-content: center;
             padding: 10px;
-            background-color: #839791;
+            background-color: #AAC0AF;
+            font-family: 'Trebuchet MS' ;
         }
 
         .left-side p {
