--- a/projects.html
+++ b/projects.html
@@ -272,11 +272,11 @@
                     <img src="images/scratch.png" alt="Scratch">
                     <div class="overlay">Scratch Project</div>
                 </div>
-                <div class="grid-item" onclick="openCustomWindow('http://flexhub.work', 1200, 700)">
+                <div class="grid-item" onclick="openCustomWindow('https://flexhub.work', 1200, 700)">
                     <img src="images/flexhub.png" alt="Programming Experiences">
                     <div class="overlay">Branding Project</div>
                 </div>
-                <div class="grid-item" onclick="openModal('contact.html')">
+                <div class="grid-item" onclick="openModal('pythonproject.pdf', 1200, 700)">
                     <img src="images/pythonproject.png" alt="Contact Me">
                     <div class="overlay">Python Project</div>
                 </div>
