--- a/projects.html
+++ b/projects.html
@@ -276,7 +276,7 @@
                     <img src="images/flexhub.png" alt="Programming Experiences">
                     <div class="overlay">Branding Project</div>
                 </div>
-                <div class="grid-item" onclick="openModal('pythonproject.pdf', 1200, 700)">
+                <div class="grid-item" onclick="openModal('Sonia_assigment3_foodie.pdf')">
                     <img src="images/pythonproject.png" alt="Contact Me">
                     <div class="overlay">Python Project</div>
                 </div>
