pic removed from projects

--- a/projects.html
+++ b/projects.html
@@ -283,7 +283,7 @@
             </div>
         </section>
         <section class="right-section">
-            <img src="images/sonia.png" alt="Sonia Wadhwani">
+            <img src="" alt="Sonia Wadhwani">
         </section>
     </main>
 
