--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
             font-family: 'Trebuchet MS';
             display: flex;
             flex-direction: column;
-            height: 100vh;
-            overflow-y: auto;
+            overflow-y: auto; /* Allow the entire page to scroll */
+            scroll-behavior: smooth;
         }
 
         header {
@@ -32,6 +32,7 @@
             color: black;
             font-family: 'Georgia';
             margin: 0 15px;
+            cursor: pointer;
         }
 
         .logo {
@@ -41,17 +42,17 @@
         }
 
         main {
-            flex: 1;
             display: flex;
             flex-direction: row;
-            overflow-y: auto;
+            height: 100vh; /* Full viewport height */
+            width: 80%; /* Limit to 80% of the screen */
+            margin: 0 auto; /* Center the main section */
         }
 
         .left-section {
             flex: 1;
-            padding: 20px;
-            padding-left: 40px;
-            overflow-y: auto;
+            padding: 20px 40px;
+            overflow: hidden; /* Prevent scroll in the left section */
         }
 
         .right-section {
@@ -59,50 +60,96 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            height: 100vh; /* Ensure the section takes full screen height */
+            overflow: hidden;
         }
 
         .right-section img {
-            max-width: 100%;
-            height: 100%; /* Ensures the image stretches vertically to fill height */
-            object-fit: contain;
+            width: 100%;
+            height: 100%;
+            object-fit: contain; /* Ensure image fits and doesn't get cropped */
+            object-position: center center; /* Center the image to avoid cuts */
         }
 
-        .large-text-l1, .large-text-l2 {
+        .large-text-l1  {
             font-family: 'Georgia';
-            font-size: calc(3vw + 2vh);
             line-height: 0.9;
             margin-bottom: 5px;
-            white-space: nowrap;
-            overflow: hidden;
-            border-right: 3px solid black;
             display: inline-block;
-        }
-
-        .body-text-l3 {
-            font-family: 'Trebuchet MS';
-            font-size: calc(3vw + 2vh);
-            line-height: 1;
-            margin-bottom: 5px;
-            white-space: nowrap;
             overflow: hidden;
-            border-right: 3px solid black;
-            display: inline-block;
-        }
-
-        .large-text-l1 {
-            font-size: calc(5.5vw);
+            font-size: calc(5.5vw); 
             margin-top: 120px;
         }
 
         .large-text-l2 {
-            font-size: calc(5.5vw);
+            font-family: 'Georgia';
+            line-height: 0.9;
+            margin-bottom: 5px;
+            display: inline-block;
+            overflow: hidden;
+            font-size: calc(5.5vw); 
             margin-top: 12px;
         }
 
         .body-text-l3 {
-            font-size: calc(1.75vw);
+            font-family: 'Georgia';
+            line-height: 0.9;
+            margin-bottom: 5px;
+            display: inline-block;
+            overflow: hidden;
+            font-size: calc(1.75vw); 
             margin-top: 5px;
+            line-height: 1.5;
+
         }
+
+        /* About Me Section */
+        #about-me {
+            padding: 50px 20px;
+            background-color: #EFD5C3; /* Match body background */
+            text-align: center;
+        }
+
+        #about-me h2 {
+            font-size: 2em;
+            margin-bottom: 20px;
+            font-family: 'Georgia';
+        }
+
+        .timeline {
+            position: relative;
+            width: 60%;
+            margin: 0 auto;
+            height: 5px;
+            background-color: #839791;
+        }
+
+        .milestone {
+            position: absolute;
+            top: -5px;
+            width: 12px;
+            height: 12px;
+            border-radius: 50%;
+            background-color: #000;
+        }
+
+        .milestone-1 { left: 50%; }
+        .milestone-2 { left: 70%; }
+        .milestone-3 { left: 90%; }
+
+        /* Text below each milestone */
+        .milestone-text {
+            position: absolute;
+            font-size: 0.9em;
+            color: black;
+            text-align: center;
+            transform: translateX(-50%);
+            margin-top: 20px;
+        }
+
+        .milestone-1-text { left: 50%; }
+        .milestone-2-text { left: 70%; }
+        .milestone-3-text { left: 90%; }
 
         footer {
             background-color: #F5F5F5;
@@ -119,51 +166,20 @@
 
         /* Responsive adjustments */
         @media (max-width: 768px) {
-            main {
-                flex-direction: column;
-            }
-
-            .right-section, .left-section {
-                flex: none;
-                width: 100%;
-                padding: 10px;
-            }
-
-            .right-section img {
-                width: 100%;
-                height: auto;
-            }
-
-            .large-text-l1, .large-text-l2 {
-                font-size: calc(4vw + 2vh);
-            }
-
-            .body-text-l3 {
-                font-size: calc(3vw);
-            }
+            main { flex-direction: column; height: auto; }
+            .right-section, .left-section { width: 100%; padding: 10px; }
+            .right-section img { width: 100%; height: auto; object-fit: contain; }
+            .large-text-l1, .large-text-l2 { font-size: calc(4vw + 2vh); }
+            .body-text-l3 { font-size: calc(3vw); }
         }
 
         @media (max-width: 480px) {
-            .logo {
-                width: 90px;
-                height: 45px;
-            }
-
-            header {
-                flex-direction: column;
-            }
-
-            header nav {
-                margin-top: 10px;
-            }
-
-            .large-text-l1, .large-text-l2 {
-                font-size: calc(5vw + 2vh);
-            }
-
-            .body-text-l3 {
-                font-size: calc(3.5vw);
-            }
+            .logo { width: 90px; height: 45px; }
+            header { flex-direction: column; }
+            header nav { margin-top: 10px; }
+            .large-text-l1, .large-text-l2 { font-size: calc(5vw + 2vh); }
+            .body-text-l3 { font-size: calc(3.5vw); }
+            #about-me h2 { font-size: 1.5em; }
         }
     </style>
 </head>
@@ -173,7 +189,7 @@
             <img src="images/logo.png" alt="Logo" class="logo">
         </a>
         <nav>
-            <a href="aboutme.html">About Me</a>
+            <a href="#about-me">About Me</a>
             <a href="projects.html">Projects</a>
             <a href="myart.html">My Art</a>
             <a href="contact.html">Let's Talk</a>
@@ -182,33 +198,50 @@
 
     <main>
         <section class="left-section">
-            <p class="large-text-l1" id="typewriterLine1"> </p><br>
-            <p class="large-text-l2" id="typewriterLine2"> </p><br><br>
-            <p class="body-text-l3" id="typewriterLine3"> </p><br>
-            <p class="body-text-l3" id="typewriterLine4"> </p><br>
-            <p class="body-text-l3" id="typewriterLine5"> </p><br>
+            <p class="large-text-l1" id="typewriterLine1"></p><br>
+            <p class="large-text-l2" id="typewriterLine2"></p><br><br>
+            <p class="body-text-l3" id="typewriterLine3"></p><br>
+
         </section>
         <section class="right-section">
             <img src="images/sonia.png" alt="Sonia Wadhwani">
         </section>
     </main>
 
+    <section id="about-me">
+        <h2>My Timeline...</h2>
+        <div class="timeline">
+            <div class="milestone milestone-1"></div>
+            <div class="milestone milestone-2"></div>
+            <div class="milestone milestone-3"></div>
+
+            <!-- Texts below milestones -->
+            <div class="milestone-text milestone-1-text">
+                Secondary School<br>2020
+            </div>
+            <div class="milestone-text milestone-2-text">
+                High School<br>2022
+            </div>
+            <div class="milestone-text milestone-3-text">
+                UnderGrad<br>2024
+            </div>
+        </div>
+    </section>
+
     <footer>
         <p>&copy; Sonia Wadhwani 2024</p>
     </footer>
 
     <script>
-        const textLine1 = "Hello,";
-        const textLine2 = "I am Sonia.";
-        const textLine3 = "A compassionate, creative design enthusiast blending";
-        const textLine4 = "artistry with user-focused innovation. I value diverse ";
-        const textLine5 = "experiences & am driven by positivity & discovery.";
+        const textLine1 = "Hello,"; 
+        const textLine2 = "I am Sonia."; 
+        const textLine3 = "A compassionate, creative design enthusiast blending artistry with user-focused innovation. I value diverse experiences & am driven by positivity & discovery."; 
+
 
         const typewriterElement1 = document.getElementById('typewriterLine1');
         const typewriterElement2 = document.getElementById('typewriterLine2');
         const typewriterElement3 = document.getElementById('typewriterLine3');
-        const typewriterElement4 = document.getElementById('typewriterLine4');
-        const typewriterElement5 = document.getElementById('typewriterLine5');
+
 
         let index1 = 0, index2 = 0, index3 = 0, index4 = 0, index5 = 0;
 
@@ -242,31 +275,13 @@
             }
         }
 
-        function typeWriter4() {
-            if (index4 < textLine4.length) {
-                typewriterElement4.innerHTML += textLine4[index4];
-                index4++;
-                setTimeout(typeWriter4, 40);
-            } else {
-                typewriterElement4.style.borderRight = "none";
-            }
-        }
 
-        function typeWriter5() {
-            if (index5 < textLine5.length) {
-                typewriterElement5.innerHTML += textLine5[index5];
-                index5++;
-                setTimeout(typeWriter5, 40);
-            } else {
-                typewriterElement5.style.borderRight = "none";
-            }
-        }
+
 
         typeWriter1();
         setTimeout(typeWriter2, 1000);
         setTimeout(typeWriter3, 2000);
-        setTimeout(typeWriter4, 4600);
-        setTimeout(typeWriter5, 7000);
+
     </script>
 </body>
 </html>
