--- a/v4/index.html
+++ b/v4/index.html
@@ -3,12 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <title>Sonia Wadhwani</title>
     <style>
+
+     
+
+
         body {
             background-color: #EFD5C3;
             margin: 0;
-            font-family: 'Trebuchet MS';
+            font-family: "Raleway";
             display: flex;
             flex-direction: column;
             height: 100vh;
@@ -30,7 +37,7 @@
         header a {
             text-decoration: none;
             color: black;
-            font-family: 'Georgia';
+            font-family: "Georgia";
             margin: 0 15px;
         }
 
@@ -68,7 +75,7 @@
         }
 
         .large-text-l1, .large-text-l2 {
-            font-family: 'Georgia';
+            font-family: "Georgia";
             font-size: calc(3vw + 2vh);
             line-height: 0.9;
             margin-bottom: 5px;
@@ -79,7 +86,7 @@
         }
 
         .body-text-l3 {
-            font-family: 'Trebuchet MS';
+            font-family: "Raleway";
             font-size: calc(3vw + 2vh);
             line-height: 1;
             margin-bottom: 5px;
@@ -106,7 +113,7 @@
 
         footer {
             background-color: #F5F5F5;
-            font-family: 'Trebuchet MS';
+            font-family: "Raleway";
             text-align: center;
             padding: 10px;
         }
