updated font family

--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">    
     <title>Sonia Wadhwani</title>
     <style>
         body {
             background-color: #EFD5C3;
             margin: 0;
-            font-family: 'Trebuchet MS';
+            font-family: 'Raleway';
             display: flex;
             flex-direction: column;
             overflow-y: auto;
@@ -92,7 +95,7 @@
         }
 
         .body-text-l3 {
-            font-family: 'Georgia';
+            font-family: 'Raleway';
             line-height: 0.9;
             margin-bottom: 5px;
             display: inline-block;
@@ -105,17 +108,19 @@
         /* About Me Section */
         #about-me {
             padding: 50px 10%;
-            background-color: #EFD5C3;
+            background-color: #839791; /* Changed background color */
+            text-align: center;
         }
 
         #about-me h2 {
             font-size: 2em;
-            margin-bottom: 20px;
+            margin-bottom: 50px; /* Increased space between About Me and Timeline title */
             font-family: 'Georgia';
+            color: #EFD5C3; /* Changed font color */
         }
 
         .about-title {
-            color: black;
+            color: #EFD5C3; /* Changed font color */
             text-align: left;
             font-size: 2em;
             font-family: 'Georgia';
@@ -126,9 +131,9 @@
             position: relative;
             width: 60%;
             height: 5px;
-            background-color: #839791;
-            margin-left: 10%;
-            margin-bottom: 30px; /* Added margin at the bottom */
+            background-color: #EFD5C3; /* Changed color of the timeline */
+            margin: 0 auto; /* Center the timeline */
+            margin-bottom: 30px;
         }
 
         .milestone {
@@ -281,8 +286,6 @@
         typeWriter1();
         setTimeout(typeWriter2, 1000);
         setTimeout(typeWriter3, 2000);
-   
-
     </script>
 </body>
 </html>
