--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
         .timeline {
             position: relative;
-            width: 60%;
+            width: 80%;
             margin: 0 auto;
             height: 5px;
             background-color: #EFD5C3;
@@ -238,13 +238,13 @@
         /* Circle colors */
         .circle-1 { background-color: #E5D9F2; }
         .circle-2 { background-color: #A594F9; }
-        .circle-3 { background-color: #FFB0B0; }
-        .circle-4 { background-color: #E5D9F2; }
+        .circle-3 { background-color: #FF90BC; }
+        .circle-4 { background-color: #EEC759; }
         .circle-5 { background-color: #a1d6b2; }
         .circle-6 { background-color: #dd614a; }
         .circle-7 { background-color: #ffcf81; }
         .circle-8 { background-color: #F6FDC3; }
-        .circle-9 { background-color: #F2D8D8; }
+        .circle-9 { background-color: #CBFFA9; }
         .circle-10 { background-color: #FDCEDF; }       
 
         /* Animating skills */
@@ -355,7 +355,7 @@
     </main>
 
     <section id="about-me">
-        <h2 class="about-title">About Me</h2>
+        <h2 class="about-title"About Me</h2>
         <h2>My Timeline...</h2>
         <div class="timeline">
             <div class="milestone milestone-1"></div>
@@ -385,20 +385,20 @@
             <div class="skill-circle circle-3" style="width: 100px; height: 100px; top: 30%; left: 40%; animation: moveCircles 3s infinite;">
                 <p>JavaScript</p>
             </div>
-            <div class="skill-circle circle-4" style="width: 130px; height: 130px; top: 20%; left: 70%; animation: moveCircles 6s infinite;">
+            <div class="skill-circle circle-4" style="width: 130px; height: 130px; top: 10%; left: 70%; animation: moveCircles 6s infinite;">
                 <p>P5JS</p>
             </div>
-            <div class="skill-circle circle-5" style="width: 110px; height: 110px; top: 25%; left: 80%; animation: moveCircles 6s infinite;">
+            <div class="skill-circle circle-5" style="width: 110px; height: 110px; top: 25%; left: 85%; animation: moveCircles 6s infinite;">
                 <p>Python</p>
             </div>
-            <div class="skill-circle circle-6" style="width: 110px; height: 110px; top: 5%; left: 5%; animation: moveCircles 5s infinite;">
+            <div class="skill-circle circle-6" style="width: 110px; height: 110px; top: 2%; left: 2%; animation: moveCircles 5s infinite;">
                 <p>Canva</p>
             </div>
             <div class="skill-circle circle-7" style="width: 110px; height: 110px; top: 15%; left: 30%; animation: moveCircles 9s infinite;">
                 <p>Photoshop</p>
             </div>
-            <div class="skill-circle circle-8" style="width: 150px; height: 150px; top: 15%; left: 50%; animation: moveCircles 8s infinite;">
-                <p>A Illustrator</p>
+            <div class="skill-circle circle-8" style="width: 150px; height: 150px; top: 5%; left: 50%; animation: moveCircles 8s infinite;">
+                <p>Adobe Illustrator</p>
             </div>
             <div class="skill-circle circle-9" style="width: 80px; height: 80px; top: 40%; left: 10%; animation: moveCircles 5s infinite;">
                 <p>Figma</p>
